# helloworld-deploy

./: .replit  package-lock.json  package.json  pyproject.toml
.config/.semgrep/: settings.yml
attached_assets/: DASH BOARD REPORT FORMATE (1).xlsx
backend_extract/: .env  create_admin_user.py  import_data.py  main.py  test.db
backend_extract/config/: db.py
backend_extract/crud/: igi_receive.py  jewellery.py  sales.py
backend_extract/dependencies/: auth.py
backend_extract/models/: certified_stock_model.py  db_models.py  expenses_model.py  igi_issue_model.py  igi_receive_model.py  jewellery_model.py  jewellery_stock_model.py  loose_stock_model.py  memo_give_model.py  memo_take_model.py  purchase_model.py  sales_model.py  stock_transfer_model.py  user_model.py
backend_extract/routes/: admin_routes.py  auth_routes.py  backend_routes.py  certified_stock_routes.py  dashboard.py  expenses_routes.py  igi_issue_routes.py  igi_receive_routes.py  inventory_routes.py  jewellery_management_routes.py  jewellery_routes.py  jewellery_stock_routes.py  loose_stock_routes.py  memo_give_routes.py  memo_take_routes.py  purchase_routes.py  reports_routes.py  sales_routes.py  stock_transfer_routes.py
backend_extract/schemas/: igi_receive.py  jewellery.py  jewellery_management.py  sales.py  user_schema.py
backend_extract/utils/: auth_utils.py
client/src/: App.tsx  index.css  main.tsx
documentation/: Database_Access_Guide.md  Jewelry_Inventory_System_User_Manual.md  Post_Deployment_Customization.md
server/: routes.ts  storage.ts
shared/: schema.ts
(+41 files in other folders)
